@@ -1,5 +1,11 @@
 2007-09-14  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-dbus-settings.c
+		- (applet_dbus_settings_add_connection): send out NewConnection signal
+			when adding a new connection
+
+2007-09-14  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.c
 		- (foo_set_icon): don't redraw the applet icon if nothing has actually
 			changed
